infrastructure-as-code/kubernetes/applications/adguard/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns
      nodePort: 30053
  type: NodePort
